fix checkout your cart card layout and header z-index

--- a/public/style.css
+++ b/public/style.css
@@ -307,7 +307,7 @@ header {
     background-color: var(--white);
     box-shadow: rgba(0, 0, 0, .16) 0 1px 4px;
     height: 80px;
-    z-index: 1000;
+    z-index: 10001;
     position: fixed !important;
     top: 0;
     left: 0;
@@ -1483,4 +1483,28 @@ footer i {
 
 footer i:hover {
     color: var(--footer-text);
+}
+
+/* ============ checkout page ============== */
+p {
+    margin-bottom: 0 !important;
+}
+
+.checkout-table td {
+    padding: 5px 10px;
+}
+
+.checkout-table tr td:first-child {
+    font-weight: 600;
+}
+
+.checkout-container {
+    width: 95%;
+    margin: 10px auto;
+}
+
+@media (max-width: 768px) {
+    .me-2 {
+        margin-right: 0 !important;
+    }
 }
